# buoyancy-assisted-uav

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: mkdocs.yml
docs/docs/: api.md  getting_started.md  index.md  matlab.md  ros2.md
matlab/: README.md
matlab/model/: aero_model.m  buoyancy_model.m  energy_model.m
matlab/scripts/: envelope_trade_study.m  main.m  setup_paths.m  wind_velocity_test.m
matlab/tests/: test_aero_model.m  test_buoyancy_model.m
models/: README.md
models/aerodynamics/: README.md
models/buoyancy/: README.md
models/energy/: README.md
ros_ws/: README.md
ros_ws/scripts/: build.ps1  build.sh
ros_ws/src/uav_interfaces/: CMakeLists.txt  README.md  package.xml
ros_ws/src/uav_interfaces/msg/: VerticalState.msg
ros_ws/src/uav_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/uav_sim/config/: sim_params.yaml  vertical_params.yaml
ros_ws/src/uav_sim/launch/: gazebo_vertical.launch.py  sim.launch.py  vertical_test.launch.py
ros_ws/src/uav_sim/models/simple_uav/: model.config  model.sdf
ros_ws/src/uav_sim/rviz/: nav2_default.rviz
ros_ws/src/uav_sim/test/: conftest.py  test_flight_controller_node.py  test_sensor_publisher_node.py
ros_ws/src/uav_sim/uav_sim/: __init__.py  flight_controller_node.py  physics.py  sensor_publisher_node.py  vertical_dynamics_node.py
ros_ws/src/uav_sim/worlds/: empty_floor.world
scripts/: README.md  build_ros.ps1  build_ros.sh  lint.sh  run_matlab.ps1  run_sim.sh  setup_dev_env.ps1  setup_dev_env.sh
ui/: README.md  app.py
ui/widgets/: __init__.py  plot_widget.py  telemetry_widget.py
