<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_interfaces</name>
  <version>0.1.0</version>
  <description>
    Custom ROS 2 message and service type placeholders for the buoyancy-assisted UAV project.
    Extend this package when project-specific interfaces are needed.
  </description>
  <maintainer email="placeholder@example.com">Hrob02</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
